simplified careers pathways to make it easier for demo tool. Added Amit's diagram

--- a/training_batch_run_workflow/training_simulator/notebooks/Model.ipynb
+++ b/training_batch_run_workflow/training_simulator/notebooks/Model.ipynb
@@ -187,29 +187,26 @@
     "    \"simulation\": {\"steps\": 120, \"start_month\": 4, \"iterations\": 5},\n",
     "    \"streaming\":1,\n",
     "    \"init_trainees\": {\n",
-    "        \"stage1\": {\"progressing\": 0, \"hold\": 0},\n",
-    "        \"stage2\": {\"progressing\": 0, \"hold\": 0},\n",
-    "        \"stage3\": {\"progressing\": 0, \"hold\": 0},\n",
-    "        \"stage21\": {\"progressing\": 0, \"hold\": 0},\n",
-    "        \"stage211\": {\"progressing\": 0, \"hold\": 0},\n",
-    "        \"stage22\": {\"progressing\": 0, \"hold\": 0},\n",
-    "        \"stage23\": {\"progressing\": 0, \"hold\": 0},\n",
-    "        \"stage231\": {\"progressing\": 0, \"hold\": 0},\n",
-    "        \"stage31\": {\"progressing\": 0, \"hold\": 0},\n",
-    "        \"stage32\": {\"progressing\": 0, \"hold\": 0},\n",
-    "        \"stage33\": {\"progressing\": 0, \"hold\": 0},\n",
+    "        \"course1\": {\"progressing\": 0, \"hold\": 0},\n",
+    "        \"course2\": {\"progressing\": 0, \"hold\": 0},\n",
+    "        \"course3\": {\"progressing\": 0, \"hold\": 0},\n",
+    "        \"course4\": {\"progressing\": 0, \"hold\": 0},\n",
+    "        \"course5\": {\"progressing\": 0, \"hold\": 0},\n",
+    "        \"course6\": {\"progressing\": 0, \"hold\": 0},\n",
+    "        \"course7\": {\"progressing\": 0, \"hold\": 0},\n",
+    "\n",
     "    },\n",
     "\n",
     "    \"pipeline\": {\n",
     "        \"init\": {\"new_trainees\": 10, \"input_rate\": 1, \"time_hold\": 120},\n",
-    "        \"stage1\": {\n",
+    "        \"course1\": {\n",
     "            \"drop_out_progressing\": 0.12,\n",
     "            \"drop_out_hold\": 0,\n",
     "            \"capacity_progressing\": 21,\n",
     "            \"time_progressing\": 2,\n",
     "            \"time_hold\": 120,\n",
     "        },\n",
-    "        \"stage2\": {\n",
+    "        \"course2\": {\n",
     "            \"drop_out_progressing\": 0.05,\n",
     "            \"drop_out_stream\": 0.6,\n",
     "            \"drop_out_hold\": 0,\n",
@@ -217,86 +214,56 @@
     "            \"time_progressing\": 6,\n",
     "            \"time_hold\": 120,\n",
     "        },\n",
-    "        \"stage3\": {\n",
+    "        \"course3\": {\n",
     "            \"drop_out_progressing\": 0.0,\n",
     "            \"drop_out_hold\": 0.0,\n",
     "            \"capacity_progressing\": 10,\n",
     "            \"time_progressing\": 2,\n",
     "            \"time_hold\": 120,\n",
     "        },\n",
-    "        \"stage21\": {\n",
+    "        \"course4\": {\n",
     "            \"drop_out_progressing\": 0.05,\n",
     "            \"drop_out_hold\": 0,\n",
     "            \"time_progressing\": 13,\n",
     "            \"capacity_progressing\": 4,\n",
+    "            \"pathway_complete\": \"training_pathway1_complete\",\n",
     "            \"time_hold\": 120,\n",
     "        },\n",
-    "        \"stage22\": {\n",
+    "        \"course5\": {\n",
     "            \"drop_out_progressing\": 0.2,\n",
     "            \"drop_out_hold\": 0,\n",
     "            \"capacity_progressing\": 4,\n",
     "            \"time_progressing\": 10,\n",
+    "            \"pathway_complete\": \"training_pathway2_complete\",\n",
     "            \"time_hold\": 120,\n",
     "        },\n",
-    "        \"stage23\": {\n",
+    "        \"course6\": {\n",
     "            \"drop_out_progressing\": 0.05,\n",
     "            \"drop_out_hold\": 0,\n",
     "            \"capacity_progressing\": 4,\n",
     "            \"time_progressing\": 6,\n",
-    "            \"pathway_complete\": \"training_pathway1_complete\",\n",
     "            \"time_hold\": 120,\n",
     "        },\n",
-    "        \"stage211\": {\n",
+    "        \"course7\": {\n",
     "            \"drop_out_progressing\": 0.0,\n",
     "            \"drop_out_hold\": 0,\n",
     "            \"capacity_progressing\": 8,\n",
     "            \"time_progressing\": 2,\n",
-    "            \"time_hold\": 120,\n",
-    "        },\n",
-    "        \"stage231\": {\n",
-    "            \"drop_out_progressing\": 0.05,\n",
-    "            \"drop_out_hold\": 0,\n",
-    "            \"capacity_progressing\": 4,\n",
-    "            \"time_progressing\": 8,\n",
-    "            \"pathway_complete\": \"training_pathway2_complete\",\n",
-    "            \"time_hold\": 120,\n",
-    "        },\n",
-    "        \"stage31\": {\n",
-    "            \"drop_out_progressing\": 0.05,\n",
-    "            \"drop_out_hold\": 0,\n",
-    "            \"capacity_progressing\": 2,\n",
-    "            \"time_progressing\": 6,\n",
     "            \"pathway_complete\": \"training_pathway3_complete\",\n",
     "            \"time_hold\": 120,\n",
     "        },\n",
-    "        \"stage32\": {\n",
-    "            \"drop_out_progressing\": 0.05,\n",
-    "            \"drop_out_hold\": 0,\n",
-    "            \"capacity_progressing\": 10,\n",
-    "            \"time_progressing\": 2,\n",
-    "            \"time_hold\": 120,\n",
-    "        },\n",
-    "        \"stage33\": {\n",
-    "            \"drop_out_progressing\": 0.05,\n",
-    "            \"drop_out_hold\": 0,\n",
-    "            \"capacity_progressing\": 8,\n",
-    "            \"time_progressing\": 2,\n",
-    "            \"time_hold\": 120,\n",
-    "        },\n",
+    "\n",
     "\n",
     "    },\n",
     "    \"schedule\": {\n",
-    "        \"stage1\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12],\n",
-    "        \"stage2\": [2, 3, 5, 6, 7, 8, 9, 10, 11],\n",
-    "        \"stage3\": [1, 3, 4, 6, 7, 9, 11],\n",
-    "        \"stage21\": [1, 4, 7, 10],\n",
-    "        \"stage211\": [1, 4, 7, 10],\n",
-    "        \"stage22\": [2, 3, 4, 6, 7, 9, 10],\n",
-    "        \"stage23\": [1, 3, 4, 5, 6, 8, 9, 10, 11],\n",
-    "        \"stage231\": [1, 3, 4, 6, 8, 9, 11, 12],\n",
-    "        \"stage31\": [3, 7, 11],\n",
-    "        \"stage32\": [1, 3, 6, 9, 11],\n",
-    "        \"stage33\": [2, 4, 6, 8, 10, 12]\n",
+    "        \"course1\": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12],\n",
+    "        \"course2\": [2, 3, 5, 6, 7, 8, 9, 10, 11],\n",
+    "        \"course3\": [1, 3, 4, 6, 7, 9, 11],\n",
+    "        \"course4\": [1, 4, 7, 10],\n",
+    "        \"course5\": [1, 4, 7, 10],\n",
+    "        \"course6\": [2, 3, 4, 6, 7, 9, 10],\n",
+    "        \"course7\": [1, 3, 4, 5, 6, 8, 9, 10, 11],\n",
+    "\n",
     "\n",
     "    },\n",
     "}\n",
@@ -335,22 +302,22 @@
        "      <th>simulation.steps</th>\n",
        "      <th>simulation.start_month</th>\n",
        "      <th>simulation.iterations</th>\n",
-       "      <th>init_trainees.stage1.progressing</th>\n",
-       "      <th>init_trainees.stage1.hold</th>\n",
-       "      <th>init_trainees.stage2.progressing</th>\n",
-       "      <th>init_trainees.stage2.hold</th>\n",
-       "      <th>init_trainees.stage3.progressing</th>\n",
+       "      <th>init_trainees.course1.progressing</th>\n",
+       "      <th>init_trainees.course1.hold</th>\n",
+       "      <th>init_trainees.course2.progressing</th>\n",
+       "      <th>init_trainees.course2.hold</th>\n",
+       "      <th>init_trainees.course3.progressing</th>\n",
        "      <th>...</th>\n",
-       "      <th>schedule.stage2</th>\n",
-       "      <th>schedule.stage3</th>\n",
-       "      <th>schedule.stage21</th>\n",
-       "      <th>schedule.stage211</th>\n",
-       "      <th>schedule.stage22</th>\n",
-       "      <th>schedule.stage23</th>\n",
-       "      <th>schedule.stage231</th>\n",
-       "      <th>schedule.stage31</th>\n",
-       "      <th>schedule.stage32</th>\n",
-       "      <th>schedule.stage33</th>\n",
+       "      <th>pipeline.course7.time_progressing</th>\n",
+       "      <th>pipeline.course7.pathway_complete</th>\n",
+       "      <th>pipeline.course7.time_hold</th>\n",
+       "      <th>schedule.course1</th>\n",
+       "      <th>schedule.course2</th>\n",
+       "      <th>schedule.course3</th>\n",
+       "      <th>schedule.course4</th>\n",
+       "      <th>schedule.course5</th>\n",
+       "      <th>schedule.course6</th>\n",
+       "      <th>schedule.course7</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -367,48 +334,48 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>training_pathway3_complete</td>\n",
+       "      <td>120</td>\n",
+       "      <td>[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]</td>\n",
        "      <td>[2, 3, 5, 6, 7, 8, 9, 10, 11]</td>\n",
        "      <td>[1, 3, 4, 6, 7, 9, 11]</td>\n",
        "      <td>[1, 4, 7, 10]</td>\n",
        "      <td>[1, 4, 7, 10]</td>\n",
        "      <td>[2, 3, 4, 6, 7, 9, 10]</td>\n",
        "      <td>[1, 3, 4, 5, 6, 8, 9, 10, 11]</td>\n",
-       "      <td>[1, 3, 4, 6, 8, 9, 11, 12]</td>\n",
-       "      <td>[3, 7, 11]</td>\n",
-       "      <td>[1, 3, 6, 9, 11]</td>\n",
-       "      <td>[2, 4, 6, 8, 10, 12]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 100 columns</p>\n",
+       "<p>1 rows × 68 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "  version  streaming  simulation.steps  simulation.start_month  \\\n",
        "0   2.1.3          1               120                       4   \n",
        "\n",
-       "   simulation.iterations  init_trainees.stage1.progressing  \\\n",
-       "0                      5                                 0   \n",
+       "   simulation.iterations  init_trainees.course1.progressing  \\\n",
+       "0                      5                                  0   \n",
        "\n",
-       "   init_trainees.stage1.hold  init_trainees.stage2.progressing  \\\n",
-       "0                          0                                 0   \n",
+       "   init_trainees.course1.hold  init_trainees.course2.progressing  \\\n",
+       "0                           0                                  0   \n",
        "\n",
-       "   init_trainees.stage2.hold  init_trainees.stage3.progressing  ...  \\\n",
-       "0                          0                                 0  ...   \n",
+       "   init_trainees.course2.hold  init_trainees.course3.progressing  ...  \\\n",
+       "0                           0                                  0  ...   \n",
        "\n",
-       "                 schedule.stage2         schedule.stage3  schedule.stage21  \\\n",
+       "   pipeline.course7.time_progressing  pipeline.course7.pathway_complete  \\\n",
+       "0                                  2         training_pathway3_complete   \n",
+       "\n",
+       "   pipeline.course7.time_hold                         schedule.course1  \\\n",
+       "0                         120  [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]   \n",
+       "\n",
+       "                schedule.course2        schedule.course3  schedule.course4  \\\n",
        "0  [2, 3, 5, 6, 7, 8, 9, 10, 11]  [1, 3, 4, 6, 7, 9, 11]     [1, 4, 7, 10]   \n",
        "\n",
-       "   schedule.stage211        schedule.stage22               schedule.stage23  \\\n",
-       "0      [1, 4, 7, 10]  [2, 3, 4, 6, 7, 9, 10]  [1, 3, 4, 5, 6, 8, 9, 10, 11]   \n",
+       "   schedule.course5        schedule.course6               schedule.course7  \n",
+       "0     [1, 4, 7, 10]  [2, 3, 4, 6, 7, 9, 10]  [1, 3, 4, 5, 6, 8, 9, 10, 11]  \n",
        "\n",
-       "            schedule.stage231  schedule.stage31  schedule.stage32  \\\n",
-       "0  [1, 3, 4, 6, 8, 9, 11, 12]        [3, 7, 11]  [1, 3, 6, 9, 11]   \n",
-       "\n",
-       "       schedule.stage33  \n",
-       "0  [2, 4, 6, 8, 10, 12]  \n",
-       "\n",
-       "[1 rows x 100 columns]"
+       "[1 rows x 68 columns]"
       ]
      },
      "execution_count": 7,
@@ -429,7 +396,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e848513ba8c3487d94d4a4fb49d5f713",
+       "model_id": "50937aa755bd493c91b5d0a8b78c3893",
        "version_major": 2,
        "version_minor": 0
       },
@@ -466,24 +433,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 556600 entries, 0 to 556599\n",
+      "RangeIndex: 506385 entries, 0 to 506384\n",
       "Data columns (total 12 columns):\n",
       " #   Column          Non-Null Count   Dtype \n",
       "---  ------          --------------   ----- \n",
-      " 0   index           556600 non-null  int64 \n",
-      " 1   RunId           556600 non-null  int64 \n",
-      " 2   iteration       556600 non-null  int64 \n",
-      " 3   Step            556600 non-null  int64 \n",
-      " 4   parameters      556600 non-null  object\n",
-      " 5   career_pathway  556600 non-null  object\n",
-      " 6   stagemap        556600 non-null  int64 \n",
-      " 7   AgentID         556600 non-null  object\n",
-      " 8   Stage           346761 non-null  object\n",
-      " 9   StageId         556600 non-null  object\n",
-      " 10  State           556600 non-null  object\n",
-      " 11  Month_Step      556600 non-null  int64 \n",
+      " 0   index           506385 non-null  int64 \n",
+      " 1   RunId           506385 non-null  int64 \n",
+      " 2   iteration       506385 non-null  int64 \n",
+      " 3   Step            506385 non-null  int64 \n",
+      " 4   parameters      506385 non-null  object\n",
+      " 5   career_pathway  506385 non-null  object\n",
+      " 6   stagemap        506385 non-null  int64 \n",
+      " 7   AgentID         506385 non-null  object\n",
+      " 8   Stage           506385 non-null  object\n",
+      " 9   StageId         506385 non-null  object\n",
+      " 10  State           506385 non-null  object\n",
+      " 11  Month_Step      506385 non-null  int64 \n",
       "dtypes: int64(6), object(6)\n",
-      "memory usage: 51.0+ MB\n"
+      "memory usage: 46.4+ MB\n"
      ]
     }
    ],
