updated the notebook for warm start to reflect the most recent changes with career pipeline diagram

--- a/training_batch_run_workflow/training_simulator/notebooks/warm_start.ipynb
+++ b/training_batch_run_workflow/training_simulator/notebooks/warm_start.ipynb
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,38 +448,27 @@
     "warm_start = {}\n",
     "for stage in cp.nodes:  \n",
     "    if stage != Stage.INIT.value:\n",
-    "        warm_start[stage] = split_tra(stage, total_init_pilots(stage, model_init_month), model_init_month)           "
+    "        warm_start[stage] = split_trainees(stage, total_init_trainees(stage, model_init_month), model_init_month)           "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mags': [(11.0, 0), (11.0, 1)],\n",
-       " 'eft': [(11.0, 0), (11.0, 2), (11.0, 3)],\n",
-       " 'fjlin': [(7.0, 1)],\n",
-       " 'melin': [(3.0, 0), (3.0, 1)],\n",
-       " 'brt': [(2.0, 2), (2.0, 4)],\n",
-       " 'mept': [(4.0, 1), (4.0, 2), (4.0, 4), (4.0, 5), (4.0, 6)],\n",
-       " 'art': [(2.0, 1), (2.0, 3)],\n",
-       " 'artmar': [(2.0, 0)],\n",
-       " 'bft': [(4.0, 0), (4.0, 1), (4.0, 2), (4.0, 4), (4.0, 12)],\n",
-       " 'mexo': [(2.0, 2)],\n",
-       " 'ajt1': [(2.0, 0),\n",
-       "  (2.0, 2),\n",
-       "  (2.0, 3),\n",
-       "  (2.0, 4),\n",
-       "  (2.0, 6),\n",
-       "  (2.0, 7),\n",
-       "  (2.0, 9)],\n",
-       " 'ajt2': [(2.0, 1), (2.0, 2), (2.0, 3)]}"
+       "{'course1': [(21.0, 0), (21.0, 1)],\n",
+       " 'course2': [(11.0, 0), (11.0, 2), (11.0, 3)],\n",
+       " 'course3': [(10.0, 1)],\n",
+       " 'course5': [(4.0, 1), (4.0, 4), (4.0, 7)],\n",
+       " 'course6': [(4.0, 1), (4.0, 2), (4.0, 3)],\n",
+       " 'course4': [(4.0, 1), (4.0, 4), (4.0, 7), (4.0, 10)],\n",
+       " 'course7': [(3.0, 0), (3.0, 1)]}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,53 +479,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.0 0\n",
-      "11.0 1\n",
+      "21.0 0\n",
+      "21.0 1\n",
       "11.0 0\n",
       "11.0 2\n",
       "11.0 3\n",
-      "7.0 1\n",
+      "10.0 1\n",
+      "4.0 1\n",
+      "4.0 4\n",
+      "4.0 7\n",
+      "4.0 1\n",
+      "4.0 2\n",
+      "4.0 3\n",
+      "4.0 1\n",
+      "4.0 4\n",
+      "4.0 7\n",
+      "4.0 10\n",
       "3.0 0\n",
-      "3.0 1\n",
-      "2.0 2\n",
-      "2.0 4\n",
-      "4.0 1\n",
-      "4.0 2\n",
-      "4.0 4\n",
-      "4.0 5\n",
-      "4.0 6\n",
-      "2.0 1\n",
-      "2.0 3\n",
-      "2.0 0\n",
-      "4.0 0\n",
-      "4.0 1\n",
-      "4.0 2\n",
-      "4.0 4\n",
-      "4.0 12\n",
-      "2.0 2\n",
-      "2.0 0\n",
-      "2.0 2\n",
-      "2.0 3\n",
-      "2.0 4\n",
-      "2.0 6\n",
-      "2.0 7\n",
-      "2.0 9\n",
-      "2.0 1\n",
-      "2.0 2\n",
-      "2.0 3\n"
+      "3.0 1\n"
      ]
     }
    ],
    "source": [
     "for stage in cp.nodes:  \n",
-    "    if stage != Stage.MIOT.value:\n",
+    "    if stage != Stage.INIT.value:\n",
     "        for i in warm_start[stage]:\n",
     "            print(i[0], i[1])"
    ]
